# BitboardX

./: .gitignore  .gitlab-ci.yml  7vs5.pgn  BitboardX_v0.1.10-vs-BitboardX_v0.2.0.html  Cargo.toml  README.md  book-no-book.pgn  dummy.txt  eslint.config.js  history.txt  index.html  main.js  package-lock.json  package.json  report.html  rustfmt.toml  tsconfig.json  v0.1.5-v0.1.6.pgn
benches/: search_performance.rs
bitboard_x/: Cargo.toml
bitboard_x/benches/: search_performance.rs
bitboard_x/src/: binding.rs  lib.rs  main.rs
bitboard_x/src/binding/: mod.rs  wasm_game.rs
bitboard_x/src/core/: move_gen.rs  position.rs  types.rs  zobrist.rs
bitboard_x/src/core/move_gen/: generator.rs  validation.rs
bitboard_x/src/core/position/: internal.rs  utils.rs
bitboard_x/src/core/types/: bitboard.rs  movement.rs  square.rs
bitboard_x/src/engine/: engine.rs  eval.rs  evaluation.rs  mod.rs  move_ordering.rs  search.rs  ttable.rs
bitboard_x/src/game/: console_player.rs  game_state.rs  mod.rs  player.rs
bitboard_x/tests/: engine_tests.rs  legal_move_tests.rs  perft_tests.rs
ci-scripts/: deploy-webiste.py  deploy.py
engine/: Cargo.toml
engine/src/: board.rs  engine.rs  fen_state.rs  lib.rs  main.rs  moves.rs  types.rs
engine/src/board/: bitboard.rs  fen_state.rs  mod.rs  moves.rs  position.rs  types.rs
engine/src/core/: board.rs  fen_state.rs  mod.rs  position.rs  types.rs
engine/src/engine/: mod.rs  move_gen.rs
engine/src/game/: mod.rs  undo_redo.rs
frontend/: eslint.config.js  index.html  test.html  tsconfig.json  vite.config.js  vite.config.ts
match-analyzer/: eslint.config.js  index-backup.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
match-analyzer-server/: Cargo.toml
matches/: BitboardX_v0.1.5-vs-BitboardX_v0.1.10.html  BitboardX_v0.1.5-vs-BitboardX_v0.1.7.html  BitboardX_v0.1.5-vs-BitboardX_v0.1.8.html  BitboardX_v0.1.5-vs-BitboardX_v0.1.8.pgn  BitboardX_v0.1.5-vs-BitboardX_v0.1.9-quiescence.html  BitboardX_v0.1.5-vs-BitboardX_v0.2.0.html  BitboardX_v0.2.0-vs-BitboardX_v0.2.1-PV.html  BitboardX_v0.2.0-vs-BitboardX_v0.2.2.html  BitboardX_v0.2.2-vs-stockfish1600.html  BitboardX_v0.2.3-vs-stockfish1600.html  BitboardX_v0.2.4-magic-vs-stockfish1600.html  index-v1.html  v0.1.5-v0.1.9.pgn
scripts/: build.py  match.py  report.py
src/: binding.rs  constants.js  constants.ts  game.js  game.rs  game.ts  (+12 more)
(+125 files in other folders)
