[package]
name = "bitboard_x"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = true

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "BitboardX"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
modular-bitfield = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "16.0.0"