[package]
name = "bitboard_x"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "BitboardX"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
paste = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "16.0.0"
pretty_assertions = "1.3"
colored = "2.0"