[package]
name = "bitboard_x"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
paste = "1.0"
once_cell = "1.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.9" }
rustyline = "16.0.0"
pretty_assertions = "1.3"
colored = "2.0"
log = "0.4"
fern = "0.6"
chrono = "0.4"
ctor = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
