[package]
name = "bitboard_x"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
static_assertions = "1.1"
once_cell = "1.19"
wasm-logger = "0.2"
# turn off log entirely
# log = { version = "0.4", features = ["max_level_off"] }
log = "0.4"
paste = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.9" }
pretty_assertions = "1.3"
colored = "2.0"
fern = "0.6"
chrono = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
